fixed sidebar. now when at mobile sizes, the sidebar becomes a top navigation bar. will eventually add other parts to sidebar that will be hidden on mobile devices.

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -35,14 +35,14 @@ aside {
     width: 100%;
   }
 
+  h3 {
+    display: inline-block;
+    width: 33%;
+  }
+
   aside {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    padding: 0 1rem;
   }
-
-  /* h3 {
-    display: inline-block;
-  } */
 }
